--- a/.github/workflows/deploy-to-surge.yml
+++ b/.github/workflows/deploy-to-surge.yml
@@ -13,4 +13,5 @@ jobs:
         with:
           node-version: 8
       - run: npm install -g surge
+      - run: npm build
       - run: surge public/ ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
